# skilluv-backend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.fr.md  README.md  build.rs  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml  config.toml.windows.example
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: API-ROUTES.md  AUDIT-APPEND-ONLY.md  MODERATION-vs-ADMIN.md  POST-MVP-BACKLOG.md  RLS-ENFORCEMENT.md
locales/: ar.yml  en.yml  fr.yml
migrations/: 0001_init.sql  0002_create_users.sql  0003_create_challenges.sql  0004_create_activity_log.sql  0005_create_badges.sql  0006_create_enterprises.sql  0007_create_talent_lists.sql  0008_create_contact_system.sql  0009_create_notifications.sql  0010_add_talent_search_indexes.sql  0011_add_recruiter_role.sql  0012_add_profile_fields.sql  0013_create_reports.sql  0014_create_audit_log.sql  0015_add_challenge_tags.sql  0016_create_challenge_votes.sql  0017_create_teams.sql  0018_create_api_keys.sql  0019_create_webhooks.sql  0020_add_user_city.sql  0021_create_email_infrastructure.sql  0022_create_consent_tracking.sql  0023_add_user_preferred_language.sql  0024_create_generic_audit_log.sql  0025_create_social_primitives.sql  0026_create_dm_and_blocks.sql  0027_create_forum.sql  0028_create_guilds.sql  0029_create_github_and_projects.sql  0030_create_competitions.sql  0031_create_enterprise_credits.sql  0032_create_invoices.sql  0033_sponsored_challenges.sql  0034_enterprise_pipeline.sql  0035_country_iso2_and_profile_enrichment.sql  0036_user_oauth_providers.sql  0037_pricing_packs_and_fx.sql  0038_enterprise_kyc.sql  0039_enterprise_subscriptions.sql  0040_magic_links.sql  (+74 more)
proto/: skilluv_ai.proto
scripts/: README.md  seed_badge_rule_bonjour_skilluv.sql  seed_flagships.sql  seed_onboarding_challenges.sql  seed_oss_partners.sql  seed_oss_partners_ingestion.sql  seed_season1_deliverables.sql  seed_season2_deliverables.sql  seed_skills_from_yaml.py
src/: lib.rs  main.rs  observability.rs  validators.rs
src/config/: app.rs  database.rs  mod.rs  redis_config.rs
src/errors/: codes.rs  mod.rs
src/grpc/: client.rs  mod.rs
src/middleware/: admin_destructive.rs  admin_gate.rs  api_key.rs  auth.rs  capabilities.rs  csrf.rs  mod.rs  rate_limit.rs  security_headers.rs
src/models/: badge.rs  challenge.rs  contact.rs  deliverable.rs  enterprise.rs  mod.rs  notification.rs  project_slice.rs  queue.rs  skill_node.rs  talent_list.rs  team_role_slot.rs  user.rs  user_skill.rs
src/routes/: admin.rs  admin_badge_rules.rs  admin_community.rs  admin_content_ops.rs  admin_dashboard.rs  admin_enterprises.rs  admin_fraud.rs  admin_moderation.rs  admin_ops.rs  admin_orientations.rs  admin_projects.rs  admin_skills.rs  ai_jobs.rs  (+73 more)
tests/: admin_sso_test.rs  api_keys_test.rs  auth_onboarding_test.rs  auth_test.rs  auth_totp_mail_test.rs  challenges_test.rs  community_test.rs  contact_test.rs  enterprise_sso_roundtrip_test.rs  enterprise_sso_test.rs  enterprise_test.rs  leaderboard_test.rs  moderation_test.rs  profile_test.rs  scim_test.rs  test_adm_badge_events.rs  test_adm_extras_final.rs  test_adm_m3_badge_rules.rs  test_adm_m3_orientations.rs  test_adm_m4_enterprises.rs  test_adm_m5_plus_ops.rs  test_adm_m5_users.rs  test_adm_shadow_gaps_fix.rs  test_be_p1_admin_gate.rs  test_be_p26_bounty_fee.rs  test_be_p2_audit_and_rate_limit.rs  test_e2e_ai_grpc.rs  test_fe_m1_public_orientations.rs  test_fe_m9_moderation.rs  test_ia_b_deep_plagiarism.rs  test_ia_c_ai_coach.rs  test_ia_d_ai_call_log.rs  test_p0_schema.rs  test_p10_1_teams_persistent_and_slice_claims.rs  test_p10_2_team_role_slots.rs  test_p10_3_team_composition_template.rs  test_p10_4_team_submit_deliverable.rs  test_p10_5_team_guild_bridge.rs  test_p10_6_guild_skill_matrix.rs  test_p11_1_github_ingestion.rs  (+60 more)
(+71 files in other folders)
